# ethshadow

./: .gitignore  Cargo.toml  Dockerfile  README.md  ethshadow.rs  ethshadow.yaml  run.sh  vars.env
.github/workflows/: deploy.yml  ethshadow.yml  lighthouse-geth.yaml  mdbook.yml  prysm-geth.yaml  rust.yml
assets/: genesis.env  shadow.template.yaml
assets/consensus/: config.template.yaml
assets/execution/: boot.enode  boot.key
ci/: config.yaml  prysm-geth.yaml
docs/: SUMMARY.md  advanced.md  ethshadow.md  getting-started.md  installation.md  supported-clients.md
docs/advanced/: client-settings.md  custom-hosts.md  index.md  large-sims.md  metrics.md
docs/clients/: geth.md  lighthouse.md
guide/: book.toml
guide/src/: SUMMARY.md  configuration-reference.md  getting-started.md  installation.md  introduction.md  supported-clients.md
guide/src/clients/: blobssss.md  geth.md  reth.md
lib/: Cargo.toml
lib/src/: error.rs  genesis.rs  gml.rs  lib.rs  network_graph.rs  node.rs  utils.rs  validators.rs
lib/src/clients/: blob_spammer.rs  blobssss.rs  geth.rs  geth_bootnode.rs  lighthouse.rs  lighthouse_bootnode.rs  lighthouse_vc.rs  mod.rs  prometheus.rs  prysm.rs  reth.rs  simple_blob_spammer.rs
lib/src/config/: ethshadow.rs  mod.rs  one_or_many.rs  shadow.rs
lib/tests/: test_generation.rs
lib/tests/configs/: basic.yaml
mdbook/: book.toml
scripts/: prepare-cl.sh  prepare-el.sh  util.sh
utils/: dec2ip.sh  ip2dec.sh
web3/: package-lock.json  package.json
web3/src/: deploy-deposit-contract.js  fill-lighthouse-config.js  transfer-deposit.js
