[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.77"
license = "GPL-3"
description = "Configuration utility for Ethereum network simulations in Shadow"
authors = ["Pop Chunhapanya <haxx.pop@gmail.com>", "Daniel Knopik <daniel@dknopik.de>"]

[workspace.dependencies]
clap = "4.5"
color-eyre = "0.6"
env_logger = "0.11"
ethshadow = { path = "lib" }
hex = "0.4.3"
humantime-serde = "1.1"
itertools = "0.13"
libsecp256k1 = "0.7.1"
log = "0.4"
rand = "0.8.5"
serde = "1.0"
serde_yaml = "0.9"
tempfile = "3.13"
thiserror = "1.0"
typetag = "0.2"
users = "0.11"

[workspace]
members = ["lib"]
resolver = "2"

[profile.release]
lto = "fat"
codegen-units = 1
strip = true

[package]
name = "ethshadow-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
authors.workspace = true
rust-version.workspace = true

[[bin]]
name = "ethshadow"
path = "ethshadow.rs"

[dependencies]
ethshadow = { workspace = true }
clap = { workspace = true, features = ["cargo"] }
color-eyre = { workspace = true }
env_logger = { workspace = true }
