[package]
name = "ethshadow"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
authors.workspace = true

[dependencies]
serde_yaml = { workspace = true } # deprecated, but stable, and what shadow uses
serde = { workspace = true, features = ["derive"] }
humantime-serde = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }
libsecp256k1 = { workspace = true }
hex = { workspace = true }
typetag = { workspace = true }
itertools = { workspace = true }
users = { workspace = true }
log = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
